--- a/Python_Pandas.ipynb
+++ b/Python_Pandas.ipynb
@@ -6,7 +6,7 @@
       "name": "Python-Pandas.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM5r6NKM1pDdDr2rNMAgJMc",
+      "authorship_tag": "ABX9TyOv+tem8L/3VS+tkagVrCdd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1704,7 +1704,351 @@
         "colab_type": "text"
       },
       "source": [
-        ".describe wont try to calculate a *MEAN or Standard Deviation* for the object columns, since they mostly include text strings but still will provide some descriptivie statistics"
+        ".describe wont try to calculate a *MEAN or Standard Deviation* for the object columns, since they mostly include text strings but still will provide some descriptivie statistics. \n",
+        "\n",
+        "Take a look at the team_id and Fran_id columns. the data set contains 104 team IDs but only 53 franchise IDs. Furthermore, the most frequent team ID is BOS (Boston), and the most frequent franchise is lakers.   How is this possible?\n",
+        "\n",
+        "Lets explore a bit more..."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gIIS24yV1Ak8",
+        "colab_type": "text"
+      },
+      "source": [
+        "##**Exploratory Data Analysis**\n",
+        "\n",
+        "exploratatory data analysis can help you answer questions about your dataset. for example, you can examine how often values occur in a specific column"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vHMceEpt4Q-f",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "c308f390-4299-4edd-ea18-d1ffd0ec50f5"
+      },
+      "source": [
+        "nba[\"team_id\"].value_counts()"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "BOS    5997\n",
+              "NYK    5769\n",
+              "LAL    5078\n",
+              "DET    4985\n",
+              "PHI    4533\n",
+              "       ... \n",
+              "PIT      60\n",
+              "TRH      60\n",
+              "INJ      60\n",
+              "DTF      60\n",
+              "SDS      11\n",
+              "Name: team_id, Length: 104, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MuqPhqDq4eEo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 935
+        },
+        "outputId": "4f741bae-cce9-4df5-b298-59dbc88c11fd"
+      },
+      "source": [
+        "nba[\"fran_id\"].value_counts()"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Lakers          6024\n",
+              "Celtics         5997\n",
+              "Knicks          5769\n",
+              "Warriors        5657\n",
+              "Pistons         5650\n",
+              "Sixers          5644\n",
+              "Hawks           5572\n",
+              "Kings           5475\n",
+              "Wizards         4582\n",
+              "Spurs           4309\n",
+              "Bulls           4307\n",
+              "Pacers          4227\n",
+              "Thunder         4178\n",
+              "Rockets         4154\n",
+              "Nuggets         4120\n",
+              "Nets            4106\n",
+              "Suns            4080\n",
+              "Bucks           4034\n",
+              "Trailblazers    3870\n",
+              "Cavaliers       3810\n",
+              "Clippers        3733\n",
+              "Jazz            3555\n",
+              "Mavericks       3013\n",
+              "Heat            2371\n",
+              "Pelicans        2254\n",
+              "Magic           2207\n",
+              "Timberwolves    2131\n",
+              "Grizzlies       1657\n",
+              "Raptors         1634\n",
+              "Hornets          894\n",
+              "Colonels         846\n",
+              "Squires          799\n",
+              "Spirits          777\n",
+              "Stars            756\n",
+              "Sounds           697\n",
+              "Baltimore        467\n",
+              "Floridians       440\n",
+              "Condors          430\n",
+              "Capitols         291\n",
+              "Olympians        282\n",
+              "Sails            274\n",
+              "Stags            260\n",
+              "Bombers          249\n",
+              "Steamrollers     168\n",
+              "Packers           72\n",
+              "Redskins          65\n",
+              "Rebels            63\n",
+              "Denver            62\n",
+              "Waterloo          62\n",
+              "Jets              60\n",
+              "Ironmen           60\n",
+              "Huskies           60\n",
+              "Falcons           60\n",
+              "Name: fran_id, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yS1iaO-T5GGW",
+        "colab_type": "text"
+      },
+      "source": [
+        "It seems that a team named \"lakers\" played 6024 games but only 5078 of those were played by the Los Angeles lakers.  who is the other lakers team?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-Z2LLmMb6duN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "5b1cea0f-9787-4f43-d26c-9d049ace8351"
+      },
+      "source": [
+        "nba.loc[nba[\"fran_id\"] == \"Lakers\", \"team_id\"].value_counts()"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LAL    5078\n",
+              "MNL     946\n",
+              "Name: team_id, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DA7AwHun7crF",
+        "colab_type": "text"
+      },
+      "source": [
+        "Las Angeles lakers (LAL) and Minneapolis Lakers (MNL) played 946 games. We can even find out when those games were played. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dDQtKDU28R_9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d55d5dc6-9e36-41d3-afab-2a41fd37f4f3"
+      },
+      "source": [
+        "nba.loc[nba[\"team_id\"] == \"MNL\", \"date_game\"].min()"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'1/1/1949'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YHXe_Yvw8jqL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0c339d0f-fefd-441a-cb93-8b9290111819"
+      },
+      "source": [
+        "nba.loc[nba[\"team_id\"] == \"MNL\", \"date_game\"].max()"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'4/9/1959'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tGABhZSW8uRA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "08ec9fa9-8318-4b18-8c79-9261de9b72dc"
+      },
+      "source": [
+        "nba.loc[nba[\"team_id\"] == \"MNL\", \"date_game\"].agg((\"min\", \"max\"))"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "min    1/1/1949\n",
+              "max    4/9/1959\n",
+              "Name: date_game, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OPBXrWLA9Opu",
+        "colab_type": "text"
+      },
+      "source": [
+        "Looks like the Mineanapolis lakers played between the years 1949 and 1959. This explains why we didnt recognize the team. Youve also found out why the Boston Celtics (BOS)played the most games in the dataset.  Lets analyze their history also a little bit.  Let find out how many points the boston celtics scored during all matches contained in the dataset. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yxASA0ad-TjU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1d11d182-5d40-4e60-edc6-c56f7713481f"
+      },
+      "source": [
+        "nba.loc[nba[\"team_id\"] == \"BOS\", \"pts\"].sum()"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "626484"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JnTyeRJB-vOS",
+        "colab_type": "text"
+      },
+      "source": [
+        "The Boston Celtics scored a total of 626,484 points"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2Bw91Gkz_Wbi",
+        "colab_type": "text"
+      },
+      "source": [
+        "##**Pandas Data strucutures**"
       ]
     }
   ]
