--- a/Python_Pandas.ipynb
+++ b/Python_Pandas.ipynb
@@ -6,7 +6,7 @@
       "name": "Python-Pandas.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOv+tem8L/3VS+tkagVrCdd",
+      "authorship_tag": "ABX9TyNsdBg3JMq1l6n1oXI4qcFP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2048,7 +2048,9 @@
         "colab_type": "text"
       },
       "source": [
-        "##**Pandas Data strucutures**"
+        "#**Pandas Data strucutures**\n",
+        "\n",
+        "###Understanding Series Objects"
       ]
     }
   ]
