--- a/Python_Pandas.ipynb
+++ b/Python_Pandas.ipynb
@@ -6,7 +6,7 @@
       "name": "Python-Pandas.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNsdBg3JMq1l6n1oXI4qcFP",
+      "authorship_tag": "ABX9TyPjfz6vwjXODFyHNSKNLVT9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2050,7 +2050,143 @@
       "source": [
         "#**Pandas Data strucutures**\n",
         "\n",
-        "###Understanding Series Objects"
+        "###Understanding Series Objects\n",
+        "\n",
+        "Pyhons most basic data structure is a list. Which is also a great starting point for getting to know pandas.series Objects. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q6_PbQLaGO15",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "revenues = pd.Series([5555, 7000, 1980])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QtlfKO0RGevB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "90085028-776d-40c0-e354-0c590d65c5c0"
+      },
+      "source": [
+        "revenues"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    5555\n",
+              "1    7000\n",
+              "2    1980\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vXiNsu7LGqUL",
+        "colab_type": "text"
+      },
+      "source": [
+        "you've used the list [5555, 7000, 1980] to create a series object called revenues. a series object wraps two components:\n",
+        "\n",
+        "1.   A sequence of values\n",
+        "2.   A sequence of identifiers, which is the index\n",
+        "\n",
+        "you can acces these components with .values and .index, respectively\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lgdWkGGVHcNu",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b79690d3-b23e-4f57-ecca-cf835ac76599"
+      },
+      "source": [
+        "revenues.values"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([5555, 7000, 1980])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gw1f98dRHfVo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "40bc316d-bffc-470e-9b70-a43ff388b9d2"
+      },
+      "source": [
+        "revenues.index"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RangeIndex(start=0, stop=3, step=1)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "93s-0rTRHx1Y",
+        "colab_type": "text"
+      },
+      "source": [
+        "revenue.values returns the values in a series, revenues.index returns the positional index\n",
+        "\n",
+        "NOTE: It may be of interest to note that the values of a series object are actually N-Dimensional arrays.  See NumPy for more details (https://numpy.org/)"
       ]
     }
   ]
