--- a/Python_Pandas.ipynb
+++ b/Python_Pandas.ipynb
@@ -271,216 +271,13 @@
       "metadata": {
         "id": "jidruaueJGfd",
         "colab_type": "code",
-        "outputId": "24efc3e4-20a8-4086-dc0a-23d19f45a221",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 224
-        }
+        "colab": {}
       },
       "source": [
         "nba.head()  # displays first 5 rows in dataset to view the contents"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>gameorder</th>\n",
-              "      <th>game_id</th>\n",
-              "      <th>lg_id</th>\n",
-              "      <th>_iscopy</th>\n",
-              "      <th>year_id</th>\n",
-              "      <th>date_game</th>\n",
-              "      <th>seasongame</th>\n",
-              "      <th>is_playoffs</th>\n",
-              "      <th>team_id</th>\n",
-              "      <th>fran_id</th>\n",
-              "      <th>pts</th>\n",
-              "      <th>elo_i</th>\n",
-              "      <th>elo_n</th>\n",
-              "      <th>win_equiv</th>\n",
-              "      <th>opp_id</th>\n",
-              "      <th>opp_fran</th>\n",
-              "      <th>opp_pts</th>\n",
-              "      <th>opp_elo_i</th>\n",
-              "      <th>opp_elo_n</th>\n",
-              "      <th>game_location</th>\n",
-              "      <th>game_result</th>\n",
-              "      <th>forecast</th>\n",
-              "      <th>notes</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>1</td>\n",
-              "      <td>194611010TRH</td>\n",
-              "      <td>NBA</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1947</td>\n",
-              "      <td>11/1/1946</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>TRH</td>\n",
-              "      <td>Huskies</td>\n",
-              "      <td>66</td>\n",
-              "      <td>1300.0000</td>\n",
-              "      <td>1293.2767</td>\n",
-              "      <td>40.294830</td>\n",
-              "      <td>NYK</td>\n",
-              "      <td>Knicks</td>\n",
-              "      <td>68</td>\n",
-              "      <td>1300.0000</td>\n",
-              "      <td>1306.7233</td>\n",
-              "      <td>H</td>\n",
-              "      <td>L</td>\n",
-              "      <td>0.640065</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>1</td>\n",
-              "      <td>194611010TRH</td>\n",
-              "      <td>NBA</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1947</td>\n",
-              "      <td>11/1/1946</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>NYK</td>\n",
-              "      <td>Knicks</td>\n",
-              "      <td>68</td>\n",
-              "      <td>1300.0000</td>\n",
-              "      <td>1306.7233</td>\n",
-              "      <td>41.705170</td>\n",
-              "      <td>TRH</td>\n",
-              "      <td>Huskies</td>\n",
-              "      <td>66</td>\n",
-              "      <td>1300.0000</td>\n",
-              "      <td>1293.2767</td>\n",
-              "      <td>A</td>\n",
-              "      <td>W</td>\n",
-              "      <td>0.359935</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>2</td>\n",
-              "      <td>194611020CHS</td>\n",
-              "      <td>NBA</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1947</td>\n",
-              "      <td>11/2/1946</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>CHS</td>\n",
-              "      <td>Stags</td>\n",
-              "      <td>63</td>\n",
-              "      <td>1300.0000</td>\n",
-              "      <td>1309.6521</td>\n",
-              "      <td>42.012257</td>\n",
-              "      <td>NYK</td>\n",
-              "      <td>Knicks</td>\n",
-              "      <td>47</td>\n",
-              "      <td>1306.7233</td>\n",
-              "      <td>1297.0712</td>\n",
-              "      <td>H</td>\n",
-              "      <td>W</td>\n",
-              "      <td>0.631101</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>2</td>\n",
-              "      <td>194611020CHS</td>\n",
-              "      <td>NBA</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1947</td>\n",
-              "      <td>11/2/1946</td>\n",
-              "      <td>2</td>\n",
-              "      <td>0</td>\n",
-              "      <td>NYK</td>\n",
-              "      <td>Knicks</td>\n",
-              "      <td>47</td>\n",
-              "      <td>1306.7233</td>\n",
-              "      <td>1297.0712</td>\n",
-              "      <td>40.692783</td>\n",
-              "      <td>CHS</td>\n",
-              "      <td>Stags</td>\n",
-              "      <td>63</td>\n",
-              "      <td>1300.0000</td>\n",
-              "      <td>1309.6521</td>\n",
-              "      <td>A</td>\n",
-              "      <td>L</td>\n",
-              "      <td>0.368899</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>3</td>\n",
-              "      <td>194611020DTF</td>\n",
-              "      <td>NBA</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1947</td>\n",
-              "      <td>11/2/1946</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>DTF</td>\n",
-              "      <td>Falcons</td>\n",
-              "      <td>33</td>\n",
-              "      <td>1300.0000</td>\n",
-              "      <td>1279.6189</td>\n",
-              "      <td>38.864048</td>\n",
-              "      <td>WSC</td>\n",
-              "      <td>Capitols</td>\n",
-              "      <td>50</td>\n",
-              "      <td>1300.0000</td>\n",
-              "      <td>1320.3811</td>\n",
-              "      <td>H</td>\n",
-              "      <td>L</td>\n",
-              "      <td>0.640065</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   gameorder       game_id lg_id  ...  game_result  forecast notes\n",
-              "0          1  194611010TRH   NBA  ...            L  0.640065   NaN\n",
-              "1          1  194611010TRH   NBA  ...            W  0.359935   NaN\n",
-              "2          2  194611020CHS   NBA  ...            W  0.631101   NaN\n",
-              "3          2  194611020CHS   NBA  ...            L  0.368899   NaN\n",
-              "4          3  194611020DTF   NBA  ...            L  0.640065   NaN\n",
-              "\n",
-              "[5 rows x 23 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 8
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
